fixed a small alignment issue

--- a/style.css
+++ b/style.css
@@ -282,7 +282,7 @@ section {
     margin-bottom: 3rem;
     position: relative;
     display: inline-block;
-    left: 40%;
+    left: 33%;
     transform: translateX(-50%);
     opacity: 1;
     transition: opacity 0.7s ease-in-out;
